# magnum-cluster-api

./: .charts.yml  .gitignore  .markdownlint.rb  .mdlrc  .pre-commit-config.yaml  .release-please-manifest.json  404.html  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Earthfile  Jenkinsfile  Makefile  README.md  build.rs  flake.nix  go.mod  go.sum  index.html  main.go  mkdocs.yml  pyproject.toml  release-please-config.json  renovate.json  tox.ini  vendir.lock.yml  vendir.yml  zuul.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/actions/setup-devstack/: action.yml
.github/workflows/: bump.yml  ci.yml  conformance.yml  docs.yml  image.yml  images.yml  lint.yml  publish.yml  release-please.yml  release.yml  test.yml
.jenkins/: linters.Jenkinsfile
SUMMARY/: index.html
admin/intro/: index.html
admin/troubleshooting/: index.html
crates/cluster_feature_derive/: Cargo.toml
crates/cluster_feature_derive/src/: lib.rs
crates/helm/: Cargo.toml
crates/helm/src/: lib.rs
crates/serde_gtmpl/: Cargo.toml
crates/serde_gtmpl/src/: lib.rs
data/audit/: policy.yaml
data/kubeadm/: configure-kube-proxy.sh
developer/cluster-topology/: index.html
developer/testing-and-development/: index.html
developer/upgrade-in-atmosphere/: index.html
devstack/: local.conf.sample  override-defaults  plugin.sh  settings
docs/: SUMMARY.md  labels.md
docs/admin/: authentication.md  intro.md  isolated-clusters.md  troubleshooting.md
docs/developer/: cluster-topology.md  labels.md  testing-and-development.md  upgrade-in-atmosphere.md
docs/user/: calico-upgrade-values.yaml  cilium-upgrade-values.yaml  cni-upgrades.md  configs.md  create-cluster-with-existing-private-network.md  getting-started.md  images.md  labels.md  use-cases.md
hack/: add-omt-to-clusterrole.patch  build.py  install-nix.sh  run-conformance-tests.sh  run-functional-tests.sh  run-integration-tests.sh  run-tempest-tests.sh  setup-capo.sh  setup-docker.sh  setup-helm.sh  setup-kind.sh  setup-kubectl.sh  setup-vendir.sh  stack.sh  test-hydrophone-kind.sh  version.sh
hack/bump/: cloud-provider-openstack.sh  cluster-autoscaler.sh  kubernetes.sh
internal/clusterclass/: builder.go  clusterclass.go  openstackclustertemplate.go
internal/features/: api_server_load_balancer.go  api_server_load_balancer_test.go  feature.go  helpers_test.go
internal/resources/: clusterclass.go  openstackclustertemplate.go  resources.go
internal/utils/: utils.go
magnum_cluster_api/: cache.py  clients.py  cluster_class.py  conf.py  driver.py  exceptions.py  hacks.py  helm.py  image_utils.py  images.py  json_patches.py  monitor.py  objects.py  patches.py  resources.py  service.py  sync.py  utils.py  version_matrix.py
magnum_cluster_api/charts/cluster-autoscaler/: Chart.yaml  values.yaml
magnum_cluster_api/charts/k8s-keystone-auth/: Chart.yaml  values.yaml
magnum_cluster_api/charts/kubelet-csr-approver/: Chart.yaml
magnum_cluster_api/charts/openstack-cinder-csi/: Chart.yaml
magnum_cluster_api/charts/openstack-cloud-controller-manager/: Chart.yaml
magnum_cluster_api/charts/openstack-manila-csi/: Chart.yaml
magnum_cluster_api/charts/snapshot-controller/: Chart.yaml  values.yaml
magnum_cluster_api/charts/snapshot-controller-csi/: Chart.yaml  values.yaml
magnum_cluster_api/charts/tigera-operator/: Chart.yaml
magnum_cluster_api/cluster_api/v1beta1/: cluster_class.py
magnum_cluster_api/cmd/: image_builder.py  image_loader.py  proxy.py
magnum_cluster_api/integrations/: cinder.py  cloud_provider.py  common.py  manila.py  openstack.py
magnum_cluster_api/manifests/autoscaler/: v1.20.0.yaml
magnum_cluster_api/manifests/calico/: v3.24.2.yaml  v3.25.2.yaml  v3.26.5.yaml  v3.27.4.yaml  v3.28.2.yaml  v3.29.0.yaml  v3.29.3.yaml  v3.30.0.yaml  v3.30.2.yaml  v3.30.3.yaml
magnum_cluster_api/privsep/: __init__.py  haproxy.py
magnum_cluster_api/proxy/: manager.py  structs.py  utils.py
magnum_cluster_api/tests/: conftest.py  test_helm.py  test_image_utils.py  test_images.py
proto/: driver.proto
registry/: custom-images.yml  example.yml
scripts/: test-functional.sh
src/: async.rs  builder.rs  client.rs  driver.rs  immutable_fields.rs  kube.rs  lib.rs  logging.rs  magnum.rs  models.rs  monitor.rs  registry.rs  resources.rs
src/addons/: calico.rs  cilium.rs  cinder-csi.rs  cinder_csi.rs  cloud_controller_manager.rs  csi.rs  manila-csi.rs  manila_csi.rs  mod.rs  snapshot_controller.rs  snapshot_controller_csi.rs
src/clients/: kubernetes.rs  mod.rs  openstack.rs
src/cluster_api/: clusterclasses.rs  clusterresourcesets.rs  clusters.rs  kubeadmconfigtemplates.rs  kubeadmcontrolplane.rs  kubeadmcontrolplanetemplates.rs  machines.rs  mod.rs  openstackclusters.rs  openstackclustertemplates.rs  openstackmachinetemplates.rs
src/features/: admission_plugins.rs  api_server_floating_ip.rs  api_server_load_balancer.rs  audit_log.rs  boot_volume.rs  bootstrap_status.rs  cloud_controller_manager.rs  cloud_provider.rs  cluster_config.rs  cluster_identity.rs  containerd_config.rs  control_plane_availability_zones.rs  control_plane_availablity_zones.rs  disable_api_server_floating_ip.rs  external_network.rs  extra_cloud_init.rs  flavors.rs  image_repository.rs  images.rs  keystone_auth.rs  kubelet_apiserver_tls.rs  kubelet_config.rs  kubelet_extra_args.rs  kubelet_serving_tls.rs  managed_security_groups.rs  mod.rs  networks.rs  openid_connect.rs  operating_system.rs  server_groups.rs  ssh_key.rs  test.rs  tls.rs  tls_cipher_suites.rs  volumes.rs
tests/fixtures/: kube-apiserver.yaml
tools/: sync-audit-policy  sync-calico  sync-ccm-manifests  sync-cinder-csi-manifests  sync-csi-manifests  sync-k8s-image-builds  sync-manila-csi-manifests  sync-nfs-csi-manifests  sync-snapshot-controller-csi-crds  sync-snapshot-controller-csi-manifests
user/configs/: index.html
user/getting-started/: index.html
user/images/: index.html
user/labels/: index.html
zuul.d/: jobs-flatcar.yaml  jobs-rockylinux-8.yaml  jobs-rockylinux-9.yaml  jobs-ubuntu-2204.yaml  jobs.yaml  project.yaml
(+105 files in other folders)
