[package]
name = "magnum-cluster-api"
version = "0.1.0"
edition = "2021"

[build-dependencies]
glob = "0.3"
syn = { version = "1", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.4"

[dependencies]
kube = { version = "0.98.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["schemars", "latest"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
once_cell = "1.20.3"
serde_json = "1.0.138"
pythonize = "0.23.0"
thiserror = "2.0.11"
backoff = { version = "0.4.0", features = ["tokio"] }
maplit = "1.0.2"
schemars = "0.8.21"
serde = "1.0.218"
serde_yaml = "0.9.34"
json-patch = "3.0.1"
jsonptr = "^0.6.0"
serde_gtmpl = { path = "crates/serde_gtmpl" }
indoc = "2.0.5"
base64 = "0.22.1"
ignition-config = "0.5.0"
pyo3-log = "0.12.1"
log = "0.4.26"
inventory = "0.3.19"
typed-builder = "0.20.0"
cluster_feature_derive = { path = "crates/cluster_feature_derive" }

[dependencies.pyo3]
version = "0.23.1"
features = ["abi3-py38", "extension-module"]

[dev-dependencies]
gtmpl = "0.7.1"
pretty_assertions = "1.4.1"

[workspace]
members = [ "crates/cluster_feature_derive", "crates/serde_gtmpl" ]
