[package]
name = "magnum-cluster-api"
version = "0.1.0"
edition = "2021"

[build-dependencies]
glob = "0.3"
syn = { version = "1", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.4"

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
base64 = "0.22.1"
cluster_feature_derive = { path = "crates/cluster_feature_derive" }
docker-image = "0.2.1"
helm = { path = "crates/helm" }
ignition-config = "0.5.0"
include_dir = "0.7.4"
indoc = "2.0.5"
inventory = "0.3.19"
json-patch = "3.0.1"
jsonptr = "^0.6.0"
k8s-openapi = { version = "0.24.0", features = ["schemars", "latest"] }
kube = { version = "0.98.0", features = ["runtime", "derive"] }
maplit = "1.0.2"
once_cell = "1.20.3"
pyo3-log = "0.12.1"
pythonize = "0.23.0"
schemars = "0.8.21"
serde = "1.0.218"
serde_json = "1.0.138"
serde_yaml = "0.9.34"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
typed-builder = "0.20.0"

[dependencies.pyo3]
version = "0.23.1"
features = ["abi3-py38", "extension-module", "serde"]

[dev-dependencies]
gtmpl = "0.7.1"
pretty_assertions = "1.4.1"
rstest = "0.25.0"
serde_gtmpl = { path = "crates/serde_gtmpl" }

[patch.crates-io.pyo3]
git = "https://github.com/PyO3/pyo3.git"
rev = "21132a8e77dbce1597b80f6c0ff6fbcf36c93852"

[workspace]
members = ["crates/cluster_feature_derive", "crates/helm", "crates/serde_gtmpl"]
