[package]
name = "magnum-cluster-api"
version = "0.1.0"
edition = "2021"

[build-dependencies]
glob = "0.3"
syn = { version = "2.0.100", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.5"

[dependencies]
backon = "1.5.0"
base64 = "0.22.1"
cluster_feature_derive = { path = "crates/cluster_feature_derive" }
docker-image = "0.2.1"
futures = "0.3.31"
helm = { path = "crates/helm" }
ignition-config = "0.5.0"
include_dir = "0.7.4"
indoc = "2.0.5"
inventory = "0.3.19"
json-patch = "4.0.0"
k8s-openapi = { version = "0.25.0", features = ["schemars", "v1_30"] }
kube = { version = "1.0.0", features = ["runtime", "derive"] }
log = "0.4.27"
maplit = "1.0.2"
pyo3-async-runtimes = { version = "0.25.0", features = ["tokio-runtime"] }
pyo3-log = "0.12.1"
pythonize = "0.25.0"
schemars = "0.8.21"
serde = "1.0.218"
serde_json = "1.0.138"
serde_plain = "1.0.2"
serde_yaml = "0.9.34"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
typed-builder = "0.21.0"

[dependencies.pyo3]
version = "0.25.0"
features = ["abi3-py38", "serde"]

[features]
extension-module = ["pyo3/extension-module"]
default = []

[dev-dependencies]
gtmpl = "0.7.1"
http = "1.3.1"
mockall = "0.13.1"
pretty_assertions = "1.4.1"
rstest = "0.25.0"
semver = "1.0.26"
serde_gtmpl = { path = "crates/serde_gtmpl" }
tower-test = "0.4.0"

[workspace]
members = ["crates/cluster_feature_derive", "crates/helm", "crates/serde_gtmpl"]
