[project]
name = "magnum-cluster-api"
version = "0.16.0"
description = "Cluster API driver for Magnum"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
includes = ["magnum_cluster_api/**/*"]
authors = [
  {name = "Mohammed Naser", email = "mnaser@vexxhost.com"}
]
maintainers = [
  {name = "Mohammed Naser", email = "mnaser@vexxhost.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: OpenStack",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Rust",
]
dependencies = [
  "oslo.concurrency>=4.5.0",
  "oslo.config>=8.8.0",
  "oslo.context>=4.1.0",
  "oslo.log>=4.7.0",
  "oslo.privsep>=2.7.0",
  "oslo.service>=2.8.0",
  "python-manilaclient>=3.3.2",
  "certifi",
  "click>=8.0.4",
  "diskcache>=5.6.1",
  "haproxyadmin~=0.2.4",
  "kubernetes>=24.2.0",
  "magnum>=15.0.0",
  "platformdirs>=2.4.0",
  "pykube-ng",
  "pyroute2>=0.3.4",
  "requests>=2.27.1",
  "semver<3",
  "sherlock~=0.4.1",
]

[project.scripts]
magnum-cluster-api-image-builder = "magnum_cluster_api.cmd.image_builder:main"
magnum-cluster-api-image-loader = "magnum_cluster_api.cmd.image_loader:main"
magnum-cluster-api-proxy = "magnum_cluster_api.cmd.proxy:main"

[project.entry-points."magnum.drivers"]
"k8s_cluster_api_ubuntu" = "magnum_cluster_api.driver:UbuntuDriver"
"k8s_cluster_api_ubuntu_focal" = "magnum_cluster_api.driver:UbuntuFocalDriver"
"k8s_cluster_api_flatcar" = "magnum_cluster_api.driver:FlatcarDriver"
"k8s_cluster_api_rockylinux" = "magnum_cluster_api.driver:RockyLinuxDriver"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "magnum_cluster_api._internal"
features = ["pyo3/extension-module"]
include = ["magnum_cluster_api/charts/**/*"]

[tool.isort]
profile = "black"
