[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "magnum-cluster-api"
version = "0.29.1"
description = "Cluster API driver for Magnum"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [{ name = "Mohammed Naser", email = "mnaser@vexxhost.com" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: OpenStack",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "oslo.concurrency>=4.5.0",
  "oslo.config>=8.8.0",
  "oslo.context>=4.1.0",
  "oslo.log>=4.7.0",
  "oslo.privsep>=2.7.0",
  "oslo.service>=2.8.0",
  "python-manilaclient>=3.3.2",
  "certifi",
  "click>=8.0.4",
  "diskcache>=5.6.1",
  "haproxyadmin>=0.2.4",
  "kubernetes>=24.2.0",
  "magnum>=15.0.0",
  "platformdirs>=2.4.0",
  "pykube-ng",
  "pyroute2>=0.3.4",
  "requests>=2.27.1",
  "semver>=2.0.0",
  "sherlock>=0.4.1",
  "shortuuid",
]

[dependency-groups]
dev = [
  "fixtures>=4.1.0",
  "oslotest>=5.0.0",
  "pytest<7",
  "pytest-mock>=3.6.1",
  "responses>=0.25.0",
  "types-PyYAML",
  "stestr"
]

[project.scripts]
magnum-cluster-api-image-builder = "magnum_cluster_api.cmd.image_builder:main"
magnum-cluster-api-image-loader = "magnum_cluster_api.cmd.image_loader:main"
magnum-cluster-api-proxy = "magnum_cluster_api.cmd.proxy:main"

[project.entry-points."magnum.drivers"]
k8s_cluster_api_ubuntu = "magnum_cluster_api.driver:UbuntuDriver"
k8s_cluster_api_ubuntu_focal = "magnum_cluster_api.driver:UbuntuFocalDriver"
k8s_cluster_api_flatcar = "magnum_cluster_api.driver:FlatcarDriver"
k8s_cluster_api_rockylinux = "magnum_cluster_api.driver:RockyLinuxDriver"

[project.entry-points."oslo.config.opts"]
magnum_cluster_api = "magnum_cluster_api.conf:list_opts"

[tool.maturin]
module-name = "magnum_cluster_api"

[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "rust/Cargo.toml"}, {file = "**/*.rs"}]
# Uncomment to build rust code in development mode
# config-settings = { build-args = '--profile=dev' }

[tool.isort]
profile = "black"
