[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "magnum-cluster-api"
version = "0.34.1"
description = "Cluster API driver for Magnum"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Mohammed Naser", email = "mnaser@vexxhost.com" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: OpenStack",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "certifi",
  "click>=8.0.4",
  "diskcache>=5.6.1",
  "eventlet>=0.33.1",
  "haproxyadmin>=0.2.4",
  "kubernetes>=24.2.0",
  "magnum>=15.0.0",
  "oslo.concurrency>=4.5.0",
  "oslo.config>=8.8.0",
  "oslo.context>=4.1.0",
  "oslo.log>=4.7.0",
  "oslo.privsep>=2.7.0",
  "oslo.service>=2.8.0",
  "platformdirs>=2.4.0",
  "pykube-ng",
  "pyroute2>=0.3.4",
  "python-heatclient",
  "python-manilaclient>=3.3.2",
  "requests>=2.27.1",
  "semver>=2.0.0",
  "sherlock>=0.4.1",
  "shortuuid",
]

[dependency-groups]
dev = [
  "fixtures>=4.1.0",
  "lark>=1.3.0",
  "oslotest>=5.0.0",
  "pytest-mock>=3.6.1",
  "pytest<9",
  "responses>=0.25.0",
  "stestr",
  "types-PyYAML",
]

[project.scripts]
magnum-cluster-api-image-builder = "magnum_cluster_api.cmd.image_builder:main"
magnum-cluster-api-image-loader = "magnum_cluster_api.cmd.image_loader:main"
magnum-cluster-api-proxy = "magnum_cluster_api.cmd.proxy:main"

[project.entry-points."magnum.drivers"]
k8s_cluster_api_ubuntu = "magnum_cluster_api.driver:UbuntuDriver"
k8s_cluster_api_ubuntu_focal = "magnum_cluster_api.driver:UbuntuFocalDriver"
k8s_cluster_api_flatcar = "magnum_cluster_api.driver:FlatcarDriver"
k8s_cluster_api_rockylinux = "magnum_cluster_api.driver:RockyLinuxDriver"

[project.entry-points."oslo.config.opts"]
magnum_cluster_api = "magnum_cluster_api.conf:list_opts"

[tool.maturin]
module-name = "magnum_cluster_api"
features = ["extension-module"]

[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "rust/Cargo.toml"}, {file = "**/*.rs"}]
# Uncomment to build rust code in development mode
# config-settings = { build-args = '--profile=dev' }

[tool.isort]
profile = "black"
